--- a/projects/policebot.html
+++ b/projects/policebot.html
@@ -172,7 +172,7 @@
       </a>
       <div>
         <p>
-          Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+          Send a quick Email<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
             <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
             href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
             <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
