--- a/about.html
+++ b/about.html
@@ -218,16 +218,20 @@
         </div>
       </section>
 
-      <div class="mt-5"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf"
-        target="_blank">Download Resume(ENG)</a>　　　<a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf"
-        target="_blank">Download Resume(日本)</a></div>
+      <div class="d-flex flex-row mt-5">
+        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Download
+            Resume(ENG)</a></div>
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Download
+            Resume(日本)</a>
+        </div>
+      </div>
       <hr />
       <div class="mt-3">
         <h5>Want to Contact?</h5>
-        <p>Send me a quick Mail <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <p>Send a quick Email<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
             <i title="email" class="far fa-envelope fa-lg social"></i>
           </a>
-          Or Connect with me on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+          Or Connect on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
             <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
           </a>
         </p>
@@ -263,7 +267,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script src="script.js"></script>
 </body>
 
