--- a/certifications.html
+++ b/certifications.html
@@ -127,9 +127,12 @@
           </div>
         </div>
         <!-- Download Resume Button-->
-        <div class="mt-5"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf"
-          target="_blank">Download Resume(ENG)</a>　　　<a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf"
-          target="_blank">Download Resume(日本)</a></div>
+        <div class="d-flex flex-row mt-5">
+          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Download
+              Resume(ENG)</a></div>
+          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Download Resume(日本)</a>
+          </div>
+        </div>
       </section>
     </div>
     <!-- Back to top button -->
