--- a/projects/audio-to-indian-sign-language-translator.html
+++ b/projects/audio-to-indian-sign-language-translator.html
@@ -61,7 +61,8 @@
       <h1 class="mt-5">Audio to Indian Sign Language Translator</h1>
       <div class="text-center">
         <figure>
-          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image" width="100%" height="auto" class="img-fluid">
+          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image" width="100%"
+            height="auto" class="img-fluid">
           <figcaption>1-1</figcaption>
         </figure>
       </div>
@@ -129,10 +130,10 @@
           vast
           library.</span></p>
         <figure class="text-center">
-          <video  width="100%" height="auto" alt="Project Demo Video" preload="none" controls
-              poster="../assets/indian-sign-lang.png">
-              <source src="../assets/project-1-demo.webm" type="video/webm">
-            </video>
+          <video width="100%" height="auto" alt="Project Demo Video" preload="none" controls
+            poster="../assets/indian-sign-lang.png">
+            <source src="../assets/project-1-demo.webm" type="video/webm">
+          </video>
           <figcaption>Demo video of the webapp being used to translate audio/text into sign language. </figcaption>
         </figure>
       </div>
@@ -229,15 +230,15 @@
       </a>
       <div>
         <p>
-          Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+          Send a quick Email<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
             <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
             href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
             <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
         </a>
       </div>
     </div>
-     <!-- Back to top button -->
-     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
       <i class="fas fa-arrow-up"></i>
     </button>
   </main>
