Added New certificates and updated

--- a/about.html
+++ b/about.html
@@ -219,10 +219,10 @@
       </section>
 
       <div class="d-flex flex-row mt-5">
-        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Download
+        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">
             Resume(ENG)</a></div>
-        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Download
-            Resume(日本)</a>
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
+            Resume(日本語)</a>
         </div>
       </div>
       <hr />
@@ -240,7 +240,7 @@
       <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
         data-type="HORIZONTAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
           href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
-
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
     </div>
     <!-- Back to top button -->
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
@@ -268,6 +268,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <script src="script.js"></script>
 </body>
 
