--- a/certifications.html
+++ b/certifications.html
@@ -72,11 +72,23 @@
 
           <div class="col">
             <div class="card shadow h-100">
+              <img src="assets/azure_fundamentals.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
+                alt="Basics of Web Design and Development">
+              <h5 class="card-header">Azure Fundamentals</h5>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
               <img src="assets/web-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
                 alt="Basics of Web Design and Development">
               <h5 class="card-header">Basic Web Design & Development</h5>
             </div>
           </div>
+
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
 
           <div class="col">
             <div class="card shadow h-100">
@@ -85,9 +97,7 @@
               <h5 class="card-header">Google IT Support</h5>
             </div>
           </div>
-        </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top"
@@ -102,22 +112,27 @@
           <div class="modal-content">
 
             <div class="mySlides">
-              <div class="numbertext">1 / 4</div>
+              <div class="numbertext">1 / 5</div>
               <img src="assets/ux-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">2 / 4</div>
+              <div class="numbertext">2 / 5</div>
+              <img src="assets/azure_fundamentals.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">3 / 5</div>
               <img src="assets/web-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">3 / 4</div>
+              <div class="numbertext">4 / 5</div>
               <img src="assets/google-it-support.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">4 / 4</div>
+              <div class="numbertext">5 / 5</div>
               <img src="assets/digital-marketing.jpg" style="width:100%">
             </div>
 
@@ -126,11 +141,11 @@
 
           </div>
         </div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
         <!-- Download Resume Button-->
         <div class="d-flex flex-row mt-5">
-          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Download
-              Resume(ENG)</a></div>
-          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Download Resume(日本)</a>
+          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Resume (ENG)</a></div>
+          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Resume (日本)</a>
           </div>
         </div>
       </section>
@@ -160,6 +175,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <script src="script.js"></script>
 </body>
 
