Added New certificates and updated

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
       <br>
       <h3 class="text-center mt-5 text-muted"><span style="color: rgb(9, 9, 156);">Rishi</span> is a UI/UX Designer and a
-        Front-end Developer, focused on creating simple, efficient and powerful digital experiences for different kinds of users.</h3>
+        Front-end Developer, focused on creating simple, efficient and powerful digital experiences for everyone.</h3>
       <section class="portfolio-section">
         <h1 class="section-title my-4">Projects</h1>
 
