--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><h4>Rishi Bodke</h4></a>
+      <a class="navbar-brand" href="index.html">
+        <h4>Rishi Bodke</h4>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="index.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="projects.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="certifications.html">Certifications</a>
@@ -54,141 +53,181 @@
 
   <main>
     <div class="container">
-      <br>
-      <h3 class="text-center mt-5 text-muted"><span style="color: rgb(9, 9, 156);">Rishi</span> is a UI/UX Designer and a
-        Front-end Developer, focused on creating simple, efficient and powerful digital experiences for everyone.</h3>
-      <section class="portfolio-section">
-        <h1 class="section-title my-4">Projects</h1>
-
-        <div class="portfolio-wrapper">
-          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/portfolio.png" class="card-img-top" alt="...">
-                <h5 class="card-header">A Basic Online Portfolio</h5>
-                <div class="card-body">
-                  <p class="card-text">A simple digital portfolio for showcasing projects and skills made using HTML5,
-                    CSS3, JavaScript and Bootstrap 5.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="projects/simple-portfolio.html" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/indian-sign-lang.png" class="card-img-top" alt="Indian Sign Language Project Image">
-                <h5 class="card-header">Audio to Indian Sign Language Translator</h5>
-                <div class="card-body">
-                  <p class="card-text">A simple web application that can translate audio or textual input into the
-                    Indian Sign Language and display it using gifs. </p>
-                </div>
-                <div class="card-footer">
-                  <a href="projects/audio-to-indian-sign-language-translator.html" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/policebot.png" class="card-img-top" alt="...">
-                <h5 class="card-title card-header">PoliceBot: A chatbot for crime reporting and awareness</h5>
-                <div class="card-body">
-                  <p class="card-text">Efficient and user-friendly Chatbot for Crime Registration & Crime Awareness
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a href="projects/policebot.html" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
+      <section>
+        <br>
+        <h1 class="mt-5">About</h1>
+        <div class="my-4">
+          <div>
+            <img src="assets/me.jpg" id="author-img" class="img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
+              alt="the author's profile picture">
           </div>
-
-          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/kanban.png" class="card-img-top" alt="...">
-                <h5 class="card-title card-header">A Simple Kanban Board</h5>
-                <div class="card-body">
-                  <p class="card-text">A simple Kanban Board for managing tasks made using HTML5, CSS3 and
-                    JavaScript..</p>
-                </div>
-                <div class="card-footer">
-                  <a href="https://rishi698.github.io/kanban" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
-
-                <h5 class="card-title card-header">Mayo Life site</h5>
-                <div class="card-body">
-                  <p class="card-text">I designed and developed the mayo-life.site for a Japanese YouTuber Mayo Japan.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a href="https://mayo-life.site" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
-                <h5 class="card-header">Mayo Life's Android Webview App</h5>
-                <div class="card-body">
-                  <p class="card-text"> A simple Webview Android Application for Mayo Japan's website.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="https://play.google.com/store/apps/details?id=com.isshin.mayo_japan" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
+          <div>
+            <p>I'm a Cloud Administrator and a Frontend Developer from India.</p>
+            <p>I enjoy turning complex problems into simple, beautiful and intuitive solutions.
+              My job is to make design, implement and administor Cloud Solutions that are always functional.
+            </p>
           </div>
-
-          <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/chanoyu_bushi.png" class="card-img-top" alt="...">
-                <h5 class="card-title card-header">Renovation of Chanoyu Bushi site</h5>
-                <div class="card-body">
-                  <p class="card-text">Renovated the design of the English Version of the Chanoyu Bushi site for a
-                    Japanese Sado master.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="https://en.chanoyu-bushi.com/wp/" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card shadow h-100">
-                <img src="assets/otaku_shinbun.png" class="card-img-top" alt="...">
-                <h5 class="card-title card-header">UI/UX Design for Otaku Shinbun Android App</h5>
-                <div class="card-body">
-                  <p class="card-text">Designed the User Interface and User Experience for a news sharing Application.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a href="https://play.google.com/store/apps/details?id=com.isshin.otakushinbun" class="btn btn-primary stretched-link">READ MORE</a>
-                </div>
-              </div>
-            </div>
+          <div>
+            <h5>Goals for the future</h5>
+            <p>
+              In the near future, I want to go, live and work in Japan and experience it for myself.
+              <br>My long term goal is to travel all around the world exploring all kinds of places, and meeting new
+              people.
+            </p>
           </div>
+          <hr />
+        </div>
       </section>
-    </div>
-    <div class="container">
-      <p>
-        Send a quick Email <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
-          href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
-      </a>
-    </div>
+      <section class="resume-section">
+        <div class="row">
+          <div class="col-lg-6">
+            <h4 class="section-title"><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
+            <ul class="time-line">
+              <li class="time-line-item">
+                <span class="badge bg-primary">Oct 2021 ~ Present</span>
+                <h6 class="time-line-item-title">Project Engineer</h6>
+                <p class="time-line-item-subtitle">Wipro Limited</p>
+                <p class="time-line-item-content">Project Engineer working in Mobility and User Experience practice.
+                </p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">2018 ~ Present</span>
+                <h6 class="time-line-item-title">Freelancer</h6>
+                <p class="time-line-item-subtitle">Web Design & Development</p>
+                <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing
+                  websites
+                  using CMS like WordPress, Joomla and Drupal.</p>
+              </li>
 
+              <li class="time-line-item">
+                <span class="badge bg-primary">Jan 2018 - Dec 2021</span>
+                <h6 class="time-line-item-title">Freelance Contributor - Usabilitiy Testing</h6>
+                <p class="time-line-item-subtitle">UserTesting.com</p>
+                <p class="time-line-item-content">Usability Testing of new websites and applications or new features
+                  before they are
+                  launched to the public.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <h4 class="section-title"><i class="fas fa-graduation-cap"></i> EDUCATION</h4>
+            <ul class="time-line">
+              <li class="time-line-item">
+                <span class="badge bg-primary">2017 - 2021</span>
+                <h6 class="time-line-item-title">Bachelor's In Computer Science and Engineering</h6>
+                <p class="time-line-item-subtitle">Rajasthan Technical University, India</p>
+                <p class="time-line-item-content">Bachelor of Technology, Computer Science and Engineering</p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">2004 - 2016</span>
+                <h6 class="time-line-item-title">Schooling</h6>
+                <p class="time-line-item-subtitle">Kendriya Vidyalaya Sangathan, India</p>
+                <p class="time-line-item-content">Elementary, Secondary and Higher Secondary schooling from Kendriya
+                  Vidyalaya.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h4><i class="fas fa-magic"></i> SKILLS</h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Design</h5>
+              <div class="card-body">
+                <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
+                  Visual Design, Responsive Design, Usability Testing
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Front-end Development</h5>
+              <div class="card-body">
+                <p class="card-text"> HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla!
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Software</h5>
+              <div class="card-body">
+                <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft Office
+                  365
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h4><i class="fas fa-user"></i> PERSONAL DETAILS</h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
+              <div class="card-body">
+                <p class="card-text"> English (fluent), Hindi(native),
+                  Marathi(native), Japanese (conversational)
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Interests</h5>
+              <div class="card-body">
+                <p class="card-text"> Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Hobbies</h5>
+              <div class="card-body">
+                <p class="card-text"> Reading, Photography, Listening to Music, Sketching
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="d-flex flex-row mt-5">
+        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">
+            Resume(ENG)</a></div>
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
+            Resume(日本語)</a>
+        </div>
+      </div>
+      <hr />
+      <div class="mt-3">
+        <h5>Want to Contact?</h5>
+        <p>Send a quick Email<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+            <i title="email" class="far fa-envelope fa-lg social"></i>
+          </a>
+          Or Connect on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+            <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+          </a>
+        </p>
+      </div>
+      <hr />
+      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
+        data-type="HORIZONTAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
+          href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
+    </div>
     <!-- Back to top button -->
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
       <i class="fas fa-arrow-up"></i>
@@ -211,11 +250,12 @@
     <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2022</p>
   </footer>
 
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
