Edited the Home Page Skills in index.html

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="projects.html">Portfolio</a>
+            <a class="nav-link" href="certifications.html">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="certifications.html">Certifications</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -54,8 +54,6 @@
   <main>
     <div class="container">
       <section>
-        <br>
-        <h1 class="mt-5">About</h1>
         <div class="my-4">
           <div>
             <img src="assets/me.jpg" id="author-img" class="img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
@@ -133,6 +131,49 @@
       </section>
       <section>
         <h4><i class="fas fa-magic"></i> SKILLS</h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Microsoft Azure</h5>
+              <div class="card-body">
+                <p class="card-text"> Application Services,
+                  Azure Active Directory,
+                  Azure Administrator,
+                  Azure App Service,
+                  Azure Load Balancer,
+                  Azure Storage,
+                  Azure Subscriptions,
+                  Azure Virtual Machines,
+                  Multi-Factor Authentication,
+                  Privileged Identity Management,
+                  Secure Identities,
+                  Virtual Networks
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">On-Prem System Administration</h5>
+              <div class="card-body">
+                <p class="card-text"> Computer Networking, Active Directory, LDAP, Managing users, groups, OUs, AUs, Software Management
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <h5 class="card-header">Software</h5>
+              <div class="card-body">
+                <p class="card-text"> 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
