--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
   <main>
     <div class="container">
+      <br>
       <section>
         <div class="my-4">
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856" data-share-badge-host="https://www.credly.com"></div>
           <div>
             <img src="assets/me.jpg" id="author-img" class="img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
               alt="the author's profile picture">
@@ -136,9 +138,9 @@
             <div class="card shadow h-100">
               <h5 class="card-header">Microsoft Azure</h5>
               <div class="card-body">
-                <p class="card-text"> Application Services,
+                <p class="card-text"> Azure Administrator,
+                  Application Services,
                   Azure Active Directory,
-                  Azure Administrator,
                   Azure App Service,
                   Azure Load Balancer,
                   Azure Storage,
@@ -147,7 +149,8 @@
                   Multi-Factor Authentication,
                   Privileged Identity Management,
                   Secure Identities,
-                  Virtual Networks
+                  Virtual Networks,
+                  Governance
                 </p>
               </div>
             </div>
@@ -157,7 +160,7 @@
             <div class="card shadow h-100">
               <h5 class="card-header">On-Prem System Administration</h5>
               <div class="card-body">
-                <p class="card-text"> Computer Networking, Active Directory, LDAP, Managing users, groups, OUs, AUs, Software Management
+                <p class="card-text"> Computer Networking, Windows Active Directory, LDAP, Managing users, groups, OUs, AUs, Software Management
                 </p>
               </div>
             </div>
@@ -165,9 +168,9 @@
 
           <div class="col">
             <div class="card shadow h-100">
-              <h5 class="card-header">Software</h5>
+              <h5 class="card-header">Miscellaneous</h5>
               <div class="card-body">
-                <p class="card-text"> 
+                <p class="card-text">JavaScript, Java, Git, GitHub, GitLab, Windows, Linux 
                 </p>
               </div>
             </div>
@@ -249,7 +252,10 @@
         <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">
             Resume(ENG)</a></div>
         <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
-            Resume(日本語)</a>
+          履歴書</a>
+        </div>
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
+          職務経歴書</a>
         </div>
       </div>
       <hr />
@@ -268,6 +274,7 @@
         data-type="HORIZONTAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
           href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856" data-share-badge-host="https://www.credly.com"></div>
     </div>
     <!-- Back to top button -->
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
@@ -293,7 +300,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <script src="script.js"></script>
