--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
       </section>
 
       <div class="d-flex flex-row mt-5">
-        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">
+        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_Cloud_Administrator.pdf" target="_blank">
             Resume(ENG)</a></div>
-        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/ボドケ_リシ_履歴書.pdf" target="_blank">
           履歴書</a>
         </div>
-        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">
+        <div class="p-2"><a class="btn btn-info" href="/rishi/assets/ボドケ_リシ_職務経歴書.pdf" target="_blank">
           職務経歴書</a>
         </div>
       </div>
@@ -300,7 +300,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></>
+    crossorigin="anonymous"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <script src="script.js"></script>
