--- a/certifications.html
+++ b/certifications.html
@@ -41,13 +41,11 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Portfolio</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link active text-light" aria-current="page" href="certifications.html">Certifications</a>
+            </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="certifications.html">Certifications</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -59,30 +57,34 @@
       <section class="section">
         <br>
         <h1 class="my-5">Certifications</h1>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856"
+          data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8"
+          data-share-badge-host="https://www.credly.com"></div>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
 
           <div class="col">
             <div class="card shadow h-100">
-              <img src="assets/ux-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
-                alt="Basics of Web Design and Development">
-              <h5 class="card-header">Foundations of UX Design</h5>
+              <img src="assets/azure_administrator.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="Basics of Web Design and Development">
+              <h5 class="card-header">Azure Administrator Associate</h5>
             </div>
           </div>
 
           <div class="col">
             <div class="card shadow h-100">
-              <img src="assets/azure_fundamentals.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
-                alt="Basics of Web Design and Development">
+              <img src="assets/azure_fundamentals.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(2)" alt="Basics of Web Design and Development">
               <h5 class="card-header">Azure Fundamentals</h5>
             </div>
           </div>
 
           <div class="col">
             <div class="card shadow h-100">
-              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
-                alt="Basics of Web Design and Development">
-              <h5 class="card-header">Basic Web Design & Development</h5>
+              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(3)" alt="Google IT Support">
+              <h5 class="card-header">Google IT Support</h5>
             </div>
           </div>
 
@@ -92,16 +94,23 @@
 
           <div class="col">
             <div class="card shadow h-100">
-              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
-                onclick="openModal();currentSlide(1)" alt="Google IT Support">
-              <h5 class="card-header">Google IT Support</h5>
+              <img src="assets/ux-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(4)"
+                alt="Basics of Web Design and Development">
+              <h5 class="card-header">Foundations of UX Design</h5>
             </div>
           </div>
 
           <div class="col">
             <div class="card shadow h-100">
+              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(5)"
+                alt="Basics of Web Design and Development">
+              <h5 class="card-header">Basic Web Design & Development</h5>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow h-100">
               <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top"
-                onclick="openModal();currentSlide(3)" alt="The Fundamentals of Digital Marketing">
+                onclick="openModal();currentSlide(6)" alt="The Fundamentals of Digital Marketing">
               <h5 class="card-header">Fundamentals of Digital Marketing</h5>
             </div>
           </div>
@@ -112,27 +121,32 @@
           <div class="modal-content">
 
             <div class="mySlides">
-              <div class="numbertext">1 / 5</div>
-              <img src="assets/ux-design.jpg" style="width:100%">
+              <div class="numbertext">1 / 6</div>
+              <img src="assets/azure_administrator.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">2 / 5</div>
+              <div class="numbertext">2 / 6</div>
               <img src="assets/azure_fundamentals.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">3 / 5</div>
-              <img src="assets/web-design.jpg" style="width:100%">
-            </div>
-
-            <div class="mySlides">
-              <div class="numbertext">4 / 5</div>
+              <div class="numbertext">3 / 6</div>
               <img src="assets/google-it-support.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">5 / 5</div>
+              <div class="numbertext">4 / 6</div>
+              <img src="assets/ux-design.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">5 / 6</div>
+              <img src="assets/web-design.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">6 / 6</div>
               <img src="assets/digital-marketing.jpg" style="width:100%">
             </div>
 
@@ -141,11 +155,16 @@
 
           </div>
         </div>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
         <!-- Download Resume Button-->
         <div class="d-flex flex-row mt-5">
-          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf" target="_blank">Resume (ENG)</a></div>
-          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf" target="_blank">Resume (日本)</a>
+          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_Cloud_Administrator.pdf"
+              target="_blank">
+              Resume(ENG)</a></div>
+          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/ボドケ_リシ_履歴書.pdf" target="_blank">
+              履歴書</a>
+          </div>
+          <div class="p-2"><a class="btn btn-info" href="/rishi/assets/ボドケ_リシ_職務経歴書.pdf" target="_blank">
+              職務経歴書</a>
           </div>
         </div>
       </section>
