--- a/projects.html
+++ b/projects.html
@@ -37,12 +37,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ms-auto nav-pills justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="projects.html">Portfolio</a>
-          </li>
+        <ul class="navbar-nav ms-auto nav-pills justify-content-end"> 
           <li class="nav-item">
             <a class="nav-link" href="certifications.html">Certifications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="projects.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
 
   <main>
     <div class="container">
-      <br>
+      <br><br>
      <section class="portfolio-section">
         <h1 class="section-title my-4">Projects</h1>
 
