--- a/certifications.html
+++ b/certifications.html
@@ -4,8 +4,8 @@
 <head>
   <title>Rishi Bodke - Certifications</title>
   <meta charset="utf-8">
-  <meta name="description" content="Rishi Bodke is an experienced Website and UI/UX Designer.">
-  <meta name="keywords" content="Rishi Bodke Web Content Management Web Design UX UI">
+  <meta name="description" content="Rishi Bodke is an experienced Cloud Practitioner.">
+  <meta name="keywords" content="Rishi Bodke Azure Cloud Architect">
   <meta name="author" content="Rishi Bodke">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favi-->
