--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
         </div>
       </section>
       <section>
+        <h4><i class="fa-solid fa-certificate"></i> BADGES</h4>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856" data-share-badge-host="https://www.credly.com"></div>
+      </section>
+      <section>
         <h4><i class="fas fa-magic"></i> SKILLS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
@@ -269,12 +274,6 @@
           </a>
         </p>
       </div>
-      <hr />
-      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
-        data-type="HORIZONTAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
-          href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
-          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
-          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856" data-share-badge-host="https://www.credly.com"></div>
     </div>
     <!-- Back to top button -->
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
@@ -288,7 +287,7 @@
       <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
         <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
       </a>
-      <a class="px-2" href="https://github.com/rishi698" target="_blank">
+      <a class="px-2" href="https://github.com/rishi615" target="_blank">
         <i title="github" class="fab fa-github fa-lg social"></i>
       </a>
       <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
