added new badge and updated resume

--- a/certifications.html
+++ b/certifications.html
@@ -57,6 +57,7 @@
       <section class="section">
         <br>
         <h1 class="my-5">Certifications</h1>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bab61717-99cd-4db4-9d71-17609c6febb8" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856"
           data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8"
