updated mail address and resume

--- a/certifications.html
+++ b/certifications.html
@@ -41,9 +41,9 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <li class="nav-item">
-              <a class="nav-link active text-light" aria-current="page" href="certifications.html">Certifications</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="certifications.html">Certifications</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -57,18 +57,40 @@
       <section class="section">
         <br>
         <h1 class="my-5">Certifications</h1>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bab61717-99cd-4db4-9d71-17609c6febb8" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bab61717-99cd-4db4-9d71-17609c6febb8"
+          data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856"
           data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8"
+          data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240"
           data-share-badge-host="https://www.credly.com"></div>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
 
           <div class="col">
             <div class="card shadow h-100">
+              <img src="assets/aws_cloud_practitioner.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="AWS Cloud Practitioner">
+              <h5 class="card-header">AWS Cloud Practitioner</h5>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card shadow h-100">
+              <img src="assets/azure_architect.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(2)" alt="Azure Solutions Architect">
+              <h5 class="card-header">Azure Solutions Architect Expert</h5>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow h-100">
               <img src="assets/azure_administrator.jpg" class="card-img-top .img-fluid"
-                onclick="openModal();currentSlide(1)" alt="Basics of Web Design and Development">
+                onclick="openModal();currentSlide(3)" alt="Azure Administrator Associate">
               <h5 class="card-header">Azure Administrator Associate</h5>
             </div>
           </div>
@@ -76,23 +98,19 @@
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/azure_fundamentals.jpg" class="card-img-top .img-fluid"
-                onclick="openModal();currentSlide(2)" alt="Basics of Web Design and Development">
+                onclick="openModal();currentSlide(4)" alt="Azure Fundamentals">
               <h5 class="card-header">Azure Fundamentals</h5>
             </div>
           </div>
-
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
-                onclick="openModal();currentSlide(3)" alt="Google IT Support">
+                onclick="openModal();currentSlide(5)" alt="Google IT Support">
               <h5 class="card-header">Google IT Support</h5>
             </div>
           </div>
-
-        </div>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/ux-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(4)"
@@ -108,6 +126,10 @@
               <h5 class="card-header">Basic Web Design & Development</h5>
             </div>
           </div>
+
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top"
@@ -122,32 +144,42 @@
           <div class="modal-content">
 
             <div class="mySlides">
-              <div class="numbertext">1 / 6</div>
+              <div class="numbertext">1 / 10</div>
+              <img src="assets/aws_cloud_practitioner.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">2 / 10</div>
+              <img src="assets/azure_architect.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">3 / 10</div>
               <img src="assets/azure_administrator.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">2 / 6</div>
+              <div class="numbertext">4 / 10</div>
               <img src="assets/azure_fundamentals.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">3 / 6</div>
+              <div class="numbertext">5 / 10</div>
               <img src="assets/google-it-support.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">4 / 6</div>
+              <div class="numbertext">6 / 10</div>
               <img src="assets/ux-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">5 / 6</div>
+              <div class="numbertext">7 / 10</div>
               <img src="assets/web-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">6 / 6</div>
+              <div class="numbertext">8 / 10</div>
               <img src="assets/digital-marketing.jpg" style="width:100%">
             </div>
 
@@ -184,7 +216,7 @@
       <a class="px-2" href="https://github.com/rishi615" target="_blank">
         <i title="github" class="fab fa-github fa-lg social"></i>
       </a>
-      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+      <a class="px-2" href="mailto:rishi615@outlook.jp" target="_top">
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
