--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           
           <div>
-            <p>I'm a Cloud Administrator and a Frontend Developer from India.</p>
+            <p>I'm a Cloud Practitioner and a Frontend Developer from India.</p>
             <p>I enjoy turning complex problems into simple, beautiful and intuitive solutions.
               My job is to make design, implement and administor Cloud Solutions that are always functional.
             </p>
@@ -115,7 +115,7 @@
             <ul class="time-line">
               <li class="time-line-item">
                 <span class="badge bg-primary">2017 - 2021</span>
-                <h6 class="time-line-item-title">Bachelor's In Computer Science and Engineering</h6>
+                <h6 class="time-line-item-title">Bachelor's in Computer Science and Engineering</h6>
                 <p class="time-line-item-subtitle">Rajasthan Technical University, India</p>
                 <p class="time-line-item-content">Bachelor of Technology, Computer Science and Engineering</p>
               </li>
@@ -136,27 +136,17 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bab61717-99cd-4db4-9d71-17609c6febb8" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
       </section>
       <section>
         <h4><i class="fas fa-magic"></i> SKILLS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
-              <h5 class="card-header">Microsoft Azure</h5>
+              <h5 class="card-header">Cloud Computing</h5>
               <div class="card-body">
-                <p class="card-text"> Azure Administrator,
-                  Application Services,
-                  Azure Active Directory,
-                  Azure App Service,
-                  Azure Load Balancer,
-                  Azure Storage,
-                  Azure Subscriptions,
-                  Azure Virtual Machines,
-                  Multi-Factor Authentication,
-                  Privileged Identity Management,
-                  Secure Identities,
-                  Virtual Networks,
-                  Governance
+                <p class="card-text"> Microsoft Azure, Amazon Web Services (AWS), 
+                  Administration, Cloud Solutions Architect, Virtual Networks, Cloud Networking, CI/CD
                 </p>
               </div>
             </div>
@@ -176,7 +166,7 @@
             <div class="card shadow h-100">
               <h5 class="card-header">Miscellaneous</h5>
               <div class="card-body">
-                <p class="card-text">JavaScript, Java, Git, GitHub, GitLab, Windows, Linux 
+                <p class="card-text">JavaScript, Java, Git, GitHub, GitLab, CI/CD, Windows, Linux 
                 </p>
               </div>
             </div>
@@ -267,7 +257,7 @@
       <hr />
       <div class="mt-3">
         <h5>Want to Contact?</h5>
-        <p>Send a quick Email<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <p>Send a quick Email<a class="px-2" href="mailto:rishi615@outlook.jp" target="_top">
             <i title="email" class="far fa-envelope fa-lg social"></i>
           </a>
           Or Connect on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
@@ -291,7 +281,7 @@
       <a class="px-2" href="https://github.com/rishi615" target="_blank">
         <i title="github" class="fab fa-github fa-lg social"></i>
       </a>
-      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+      <a class="px-2" href="mailto:rishi615@outlook.jp" target="_top">
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
