--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,7 @@
     </div>
     <div class="container">
       <p>
-        Send a quick Email <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        Send a quick Email <a class="px-2" href="mailto:rishi615@outlook.jp" target="_top">
           <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
           href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
           <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
@@ -199,7 +199,7 @@
       <a class="px-2" href="https://github.com/rishi615" target="_blank">
         <i title="github" class="fab fa-github fa-lg social"></i>
       </a>
-      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+      <a class="px-2" href="mailto:rishi615@outlook.jp" target="_top">
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
