--- a/certifications.html
+++ b/certifications.html
@@ -57,14 +57,10 @@
       <section class="section">
         <br>
         <h1 class="my-5">Certifications</h1>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bab61717-99cd-4db4-9d71-17609c6febb8"
-          data-share-badge-host="https://www.credly.com"></div>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5390cadf-ceb7-4a5d-bbab-5527825eb856"
-          data-share-badge-host="https://www.credly.com"></div>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c565f8ed-ada5-4e1c-bfa2-5001f3a8e0d8"
-          data-share-badge-host="https://www.credly.com"></div>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240"
-          data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="20b12dfc-fd12-4e52-bea0-f97a07bc9383" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4a6a2ef6-80bb-48c0-bd3d-e41a7615fc33" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2ca571b-8d61-4a09-81e3-270a4902bc59" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
 
